--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-flask
-torch
-transformers
-codecarbon
-psutil
+flask==3.0.3
+torch==2.3.1
+transformers==4.43.3
+accelerate==0.33.0
+codecarbon==2.3.5
+psutil==5.9.8
+numpy==1.26.4
